--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
 body {
-  background-color: hotpink; }
+  background-color: white;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #777;
+  line-height: 1.7;
+  padding: 20px; }
+
+.header {
+  background-image: linear-gradient(to right bottom, rgba(58, 129, 58, 0.7), rgba(118, 202, 125, 0.7)), url("../img/hero.jpg");
+  height: 90vh;
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
