--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,36 @@ body {
 
 .header {
   background-image: linear-gradient(to right bottom, rgba(58, 129, 58, 0.7), rgba(118, 202, 125, 0.7)), url("../img/hero.jpg");
+  position: relative;
   height: 90vh;
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px; }
+
+.logo {
+  height: 35px; }
+
+.page-title-box {
+  color: white;
+  text-transform: uppercase;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.page-title-main {
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 35px; }
+
+.page-title-sub {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 17.5px; }
